fixed spacing and alignment issues

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 * {
   font-family: "Oswald", sans-serif;
   margin: 0px;
+  padding: 0px;
 }
 
 @media only screen and (max-width: 700px) {
@@ -257,6 +258,7 @@ img {
   text-align: center;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+  margin: 0px;
 }
 
 .front {
@@ -267,8 +269,8 @@ img {
   transform: rotateY(-180deg);
   /* background: #3b3c3f; */
   background-image: url(img/card-back.svg);
-  justify-content: flex-start;
-  -webkit-justify-content: flex-start;
+  justify-content: space-evenly;
+  -webkit-justify-content: space-evenly;
   text-align: left;
 }
 
@@ -276,13 +278,15 @@ img {
   color: rgb(29, 151, 233);
   font-size: 150%;
   font-weight: 700;
-  text-align: left;
-  margin: 10px;
-  margin-bottom: 5px;
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
 }
 
 .buttons {
-  margin: auto;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .back button {
@@ -308,10 +312,11 @@ img {
 
 .card-description {
   color: white;
-  margin: 10px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 0px;
+  margin-left: 5px;
+  margin-right: 5px;
   font-family: "pt-sans", sans-serif;
+  text-align: center;
 }
 
 .contact-form {
